ipc/ipdl/test/ipdl/ok/PRefcounted.ipdl
[RefCounted] async protocol PRefcounted {
child:
    async __delete__();
};
