ipc/ipdl/test/ipdl/error/PToplevelManualDealloc.ipdl
//error: Toplevel protocols cannot be [ManualDealloc]

[ManualDealloc] async protocol PToplevelManualDealloc {
child:
    async __delete__();
};
